fix bugs and add calendar
Co-authored-by: Alessandra Yumi Carvalho Ogawa <alessandrayco@users.noreply.github.com>
Co-authored-by: Arthur Cisotto <ArthurCisotto@users.noreply.github.com>
Co-authored-by: rodrigo gomes <rodrigog11@users.noreply.github.com>

--- a/adicionar_sugestao.html
+++ b/adicionar_sugestao.html
@@ -2,54 +2,52 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Adicionar Sugestão</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/adicionar_sugestao.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="styles/fonts.css">
+    <meta charset="UTF-8">
+    <title>Adicionar Sugestão</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/adicionar_sugestao.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/fonts.css">
 
 </head>
 
 <body>
-  <header>
-    <div class="icone_esquerda">
-      <a href="/">
-        <img src="./images/icons/icone_menu.png" alt="Icone menu" />
-      </a>
-      <a href=sugestoes_alunos.html>
-        <img src="./images/icons/setinha_de_cima.png" alt="Setinha" />
-      </a>
-    </div>
-    <h1> NOME DO APLICATIVO </h1>
-  </header>
-  <main>
-    <h3>Adicionar Sugestão</h3>
-    <div class="icone_da_sugestao">
-      <p>Nome da sugestão: </p>
-      <input type="text"> <br>
-    </div>
-    <div class="nome_da_sugestao">
-      <p>Nome da sugestão: </p>
-      <input type="text"> <br>
-    </div>
-    <div class="tipo_da_atividade">
-      <p>Tipo da atividade: </p>
-      <input type="text"> <br>
-    </div>
-    <div class="enviar">
-      <img src="./images/icons/send.png" alt="Icone send">
-      <a href="#">
-        <p>Enviar</p>
-      </a>
-    </div>
-  </main>
+    <header>
+        <div class="icone_esquerda">
+            <a href="index.html">
+                <img src="./images/icons/icone_menu.png" alt="Icone menu" />
+            </a>
+            <a href=sugestoes_alunos.html>
+                <img src="./images/icons/setinha_de_cima.png" alt="Setinha" />
+            </a>
+        </div>
+        <h1> NOME DO APLICATIVO </h1>
+    </header>
+    <main>
+        <h3>Adicionar Sugestão</h3>
+        <div class="icone_da_sugestao">
+            <p>Ícone da sugestão: </p>
+            <input type="url" placeholder="Insira o link do ícone"> <br>
+        </div>
+        <div class="nome_da_sugestao">
+            <p>Nome da sugestão: </p>
+            <input type="text" placeholder="Insira o nome da sugestão"> <br>
+        </div>
+        <div class="tipo_da_atividade">
+            <p>Tipo da atividade: </p>
+            <input type="text" placeholder="Insira o tipo atividade"> <br>
+        </div>
+        <div class="enviar">
+            <img src="./images/icons/send.png" alt="Icone send">
+            <a href="#">
+                <p>Enviar</p>
+            </a>
+        </div>
+    </main>
 </body>
 
 </html>
