--- a/aluno1_feedbacks.html
+++ b/aluno1_feedbacks.html
@@ -2,58 +2,56 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Aluno 1</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/aluno1_feedbacks.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="styles/fonts.css">
+    <meta charset="UTF-8">
+    <title>Aluno 1</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/aluno1_feedbacks.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/fonts.css">
 </head>
 
 <body>
-  <header>
-    <div class="icone_esquerda">
-      <a href="/">
-        <img src="./images/icons/icone_menu.png" alt="Icone menu" />
-      </a>
-      <a href="matematica_feedback.html">
-        <img src="./images/icons/setinha_de_cima.png" alt="Setinha" />
-      </a>
-    </div>
-    <h1> NOME DO APLICATIVO </h1>
-  </header>
-  <main>
-    <div class="especificacoes">
-      <div class="materia">
-        <img src="./images/icons/mat.png" alt="Icone mat">
-        <h2> MATEMÁTICA </h2>
-      </div>
-      <h3 class="aluno"> ALUNO #1 </h3>
-    </div>
-    <div class="entrada">
-      <h2> NOTA:</h2>
-      <input type="number" placeholder="Digite a nota">
-    </div>
-    <div class="entrada">
-      <img src="./images/icons/feliz.png" alt="Icone feliz">
-      <input type="text" placeholder="Digite aqui">
-    </div>
-    <div class="entrada">
-      <img src="./images/icons/triste.png" alt="Icone triste">
-      <input type="text" placeholder="Digite aqui">
+    <header>
+        <div class="icone_esquerda">
+            <a href="index.html">
+                <img src="./images/icons/icone_menu.png" alt="Icone menu" />
+            </a>
+            <a href="matematica_feedback.html">
+                <img src="./images/icons/setinha_de_cima.png" alt="Setinha" />
+            </a>
+        </div>
+        <h1> NOME DO APLICATIVO </h1>
+    </header>
+    <main>
+        <div class="especificacoes">
+            <div class="materia">
+                <img src="./images/icons/mat.png" alt="Icone mat">
+                <h2> MATEMÁTICA </h2>
+            </div>
+            <h3 class="aluno"> ALUNO #1 </h3>
+        </div>
+        <div class="entrada">
+            <h2> NOTA:</h2>
+            <input type="number" placeholder="Digite a nota">
+        </div>
+        <div class="entrada">
+            <img src="./images/icons/feliz.png" alt="Icone feliz">
+            <input type="text" placeholder="Feedbacks positivos">
+        </div>
+        <div class="entrada">
+            <img src="./images/icons/triste.png" alt="Icone triste">
+            <input type="text" placeholder="Feedbacks negativos">
 
-    </div>
-    <div class="enviar">
-      <img src="./images/icons/send.png" alt="Icone send">
-      <a href="#">ENVIAR</a>
-    </div>
-  </main>
+        </div>
+        <div class="enviar">
+            <img src="./images/icons/send.png" alt="Icone send">
+            <a href="#">ENVIAR</a>
+        </div>
+    </main>
 </body>
 
 </html>
