--- a/matematica_feedback.html
+++ b/matematica_feedback.html
@@ -2,67 +2,65 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Matemática</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="./styles/matematica_feedback.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="styles/fonts.css">
+    <meta charset="UTF-8">
+    <title>Matemática</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="./styles/matematica_feedback.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/fonts.css">
 </head>
 
 <body>
-  <header>
-    <div class="icone_esquerda">
-      <a href="/">
-        <img src="./images/icons/icone_menu.png" alt="Icone menu" />
-      </a>
-      <a href="dar_feedbacks.html">
-        <img src="./images/icons/setinha_de_cima.png" alt="Setinha" />
-      </a>
-    </div>
-    <h1> NOME DO APLICATIVO </h1>
-  </header>
+    <header>
+        <div class="icone_esquerda">
+            <a href="index.html">
+                <img src="./images/icons/icone_menu.png" alt="Icone menu" />
+            </a>
+            <a href="dar_feedbacks.html">
+                <img src="./images/icons/setinha_de_cima.png" alt="Setinha" />
+            </a>
+        </div>
+        <h1> NOME DO APLICATIVO </h1>
+    </header>
 
-  <div class='materias'>
-    <div class='materia'>
-      <img src="./images/icons/mat.png" alt="Icone mat">
-      <h2> MATEMÁTICA </h2>
+    <div class='materias'>
+        <div class='materia'>
+            <img src="./images/icons/mat.png" alt="Icone mat">
+            <h2> MATEMÁTICA </h2>
+        </div>
+        <div class='materia'>
+            <img src="./images/icons/lupinha.png" alt="Icone lupinha">
+            <h3> Digite o nome do aluno: </h3>
+            <input type="text" placeholder="Nome">
+        </div>
+        <h3>Sugestões</h3>
     </div>
-    <div class='materia'>
-      <img src="./images/icons/lupinha.png" alt="Icone lupinha">
-      <h3> Digite o nome do aluno: </h3>
-      <input type="text" class="Digite o nome do aluno">
-    </div>
-    <h3>Sugestões</h3>
-  </div>
-  <ul>
-    <li>
-      <a href=aluno1_feedbacks.html>
-        <p>ALUNO #1</p>
-      </a>
-    </li>
-    <li>
-      <a href=#>
-        <p>ALUNO #2</p>
-      </a>
-    </li>
-    <li>
-      <a href=#>
-        <p>ALUNO #3</p>
-      </a>
-    </li>
-    <li>
-      <a href=#>
-        <p>ALUNO #4</p>
-      </a>
-    </li>
-  </ul>
+    <ul>
+        <li>
+            <a href=aluno1_feedbacks.html>
+                <p>ALUNO #1</p>
+            </a>
+        </li>
+        <li>
+            <a href=#>
+                <p>ALUNO #2</p>
+            </a>
+        </li>
+        <li>
+            <a href=#>
+                <p>ALUNO #3</p>
+            </a>
+        </li>
+        <li>
+            <a href=#>
+                <p>ALUNO #4</p>
+            </a>
+        </li>
+    </ul>
 </body>
 
 </html>
