--- a/aluno1_feedbacks.html
+++ b/aluno1_feedbacks.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/fonts.css">
+
+
 </head>
 
 <body>
@@ -34,15 +36,15 @@
             </div>
             <h3 class="aluno"> ALUNO #1 </h3>
         </div>
-        <div class="entrada">
+        <div class="entrada" id='e1'>
             <h2> NOTA:</h2>
-            <input type="number" placeholder="Digite a nota">
+            <input type="number" placeholder="Selecione a nota">
         </div>
-        <div class="entrada">
+        <div class="entrada" id='e2'>
             <img src="./images/icons/feliz.png" alt="Icone feliz">
             <input type="text" placeholder="Feedbacks positivos">
         </div>
-        <div class="entrada">
+        <div class="entrada" id='e3'>
             <img src="./images/icons/triste.png" alt="Icone triste">
             <input type="text" placeholder="Feedbacks negativos">
 
@@ -52,6 +54,7 @@
             <a href="#">ENVIAR</a>
         </div>
     </main>
+    <script src="scripts/aluno1_feedback.js"></script>
 </body>
 
 </html>
