--- a/dar_feedbacks.html
+++ b/dar_feedbacks.html
@@ -35,45 +35,45 @@
                         <p>Matemática</p>
                     </a>
                 </div>
-                <div class="materia">
+                <div class="materia em_desenvolvimento">
                     <img src="./images/icons/lp.png" alt="Icone lp" />
-                    <a href="#">
+                    <a href="erro.html">
                         <p>Lingua Portuguesa</p>
                     </a>
                 </div>
-                <div class="materia">
+                <div class="materia em_desenvolvimento">
                     <img src="./images/icons/geo.png" alt="Icone geo" />
-                    <a href="#">
+                    <a href="erro.html">
                         <p>Geografia</p>
                     </a>
                 </div>
-                <div class="materia">
+                <div class="materia em_desenvolvimento">
                     <img src="./images/icons/hist.png" alt="Icone hist" />
-                    <a href="#">
+                    <a href="erro.html">
                         <p>História</p>
                     </a>
                 </div>
-                <div class="materia">
+                <div class="materia em_desenvolvimento">
                     <img src="./images/icons/cie.png" alt="Icone cie" />
-                    <a href="#">
+                    <a href="erro.html">
                         <p>Ciências</p>
                     </a>
                 </div>
-                <div class="materia">
+                <div class="materia em_desenvolvimento">
                     <img src="./images/icons/ing.png" alt="Icone ing" />
-                    <a href="#">
+                    <a href="erro.html">
                         <p>Inglês</p>
                     </a>
                 </div>
-                <div class="materia">
+                <div class="materia em_desenvolvimento">
                     <img src="./images/icons/musica.png" alt="Icone musica" />
-                    <a href="#">
+                    <a href="erro.html">
                         <p>Música</p>
                     </a>
                 </div>
-                <div class="materia">
+                <div class="materia em_desenvolvimento">
                     <img src="./images/icons/informatica.png" alt="Icone informatica" />
-                    <a href="#">
+                    <a href="erro.html">
                         <p>Informática</p>
                     </a>
                 </div>
