--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <li><img src="images/icons/comments-solid.svg" alt="feedbacks"> <a href="inicio_feedback.html">Feedbacks</a></li>
                 <li><img src="images/icons/puzzle-piece-solid.svg" alt="puzzle"><a href="play_area.html">Play Area</a></li>
                 <li><img src="images/icons/check-solid.svg" alt="check"><a href="sugestoes_alunos.html">Painel de Sugestões</a></li>
-                <li class='em_desenvolvimento'><img src="images/icons/calendar-week-solid.svg" alt="calendar"><a href="#">Calendário</a></li>
-                <li class='em_desenvolvimento'><img src="images/icons/users-solid.svg" alt="persons"><a href="#">Lista de
+                <li class='em_desenvolvimento'><img src="images/icons/calendar-week-solid.svg" alt="calendar"><a href="erro.html">Calendário</a></li>
+                <li class='em_desenvolvimento'><img src="images/icons/users-solid.svg" alt="persons"><a href="erro.html">Lista de
             alunos</a></li>
-                <li class='em_desenvolvimento'><img src="images/icons/scroll-solid.svg" alt="papper"><a href="#">Fichas e
+                <li class='em_desenvolvimento'><img src="images/icons/scroll-solid.svg" alt="papper"><a href="erro.html">Fichas e
             Materiais de Aula</a></li>
             </ul>
         </nav>
