--- a/inicio_feedback.html
+++ b/inicio_feedback.html
@@ -34,7 +34,7 @@
                     <p>DAR FEEDBACKS</p>
                 </a>
             </li>
-            <li><a href="#">VER MEUS FEEDBACKS</a></li>
+            <li class='em_desenvolvimento'><a href="erro.html">VER MEUS FEEDBACKS</a></li>
         </ul>
     </main>
 </body>
