--- a/novo_evento.html
+++ b/novo_evento.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/fonts.css">
 
+
 </head>
 
 <body>
@@ -31,23 +32,23 @@
         <h2> Play Area </h2><br>
         <h3>Novo Evento</h3><br>
 
-        <p>Dia 12 de Setembro,18h </p><br>
+        <p class="data"></p><br>
 
-        <div class="nome_aluno">
-            <p> Nome do Aluno: </p>
-            <input type="text"><br>
+        <div class="nome_evento">
+            <p> Nome do Evento: </p>
+            <input type="text" placeholder="Nome do evento"><br>
         </div>
         <div class="atividade">
             <p> Tipo de Atividade:</p>
-            <input type="text"><br>
+            <input type="text" placeholder="Insira o tipo de atividade"><br>
         </div>
         <div class="turma">
             <p> Turma Convidada:</p>
-            <input type="text" class="Turma Convidada"><br>
+            <input type="text" class="Turma Convidada" placeholder="Insira a turma"><br>
         </div>
         <div class="plataforma">
             <p> Plataforma em que ocorrerá:</p>
-            <input type="text" class="Plataforma em que ocorrerá"><br>
+            <input type="text" class="Plataforma em que ocorrerá" placeholder="Plataforma"><br>
         </div>
         <div class="marcar_atividade">
             <a href="#">
@@ -55,6 +56,7 @@
             </a>
         </div>
     </main>
+    <script src="scripts/play_area.js"></script>
 </body>
 
 </html>
