--- a/play_area.html
+++ b/play_area.html
@@ -7,11 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" href="styles/calendar.css">
     <link rel="stylesheet" href="styles/play_area.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/fonts.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 </head>
 
 <body>
@@ -28,11 +30,96 @@
     </header>
     <main>
         <h2>Play Area </h2>
-        <h3>Selecione uma data e horário</h3>
-        <img src="./images/calendario_fofo.png" alt="Calendário para selecionar a data">
-        <a href=novo_evento.html>
-            <p> Criar novo evento </p>
-        </a>
+        <div class="calendar-container">
+
+
+            <div class="main">
+                <div class="sideb">
+                    <div class="header"><i class="fa fa-angle-left" aria-hidden="true"></i><span><span class="month">
+                        </span><span class="year"></span></span><i class="fa fa-angle-right" aria-hidden="true"></i>
+                    </div>
+                    <div class="calender">
+                        <table>
+                            <thead>
+                                <tr class="weedays">
+                                    <th data-weekday="dom" data-column="0">Dom</th>
+                                    <th data-weekday="seg" data-column="1">Seg</th>
+                                    <th data-weekday="ter" data-column="2">Ter</th>
+                                    <th data-weekday="qua" data-column="3">Qua</th>
+                                    <th data-weekday="qui" data-column="4">Qui</th>
+                                    <th data-weekday="sex" data-column="5">Sex</th>
+                                    <th data-weekday="sab" data-column="6">Sab</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr class="days" data-row="0">
+                                    <td data-column="0"></td>
+                                    <td data-column="1"></td>
+                                    <td data-column="2"></td>
+                                    <td data-column="3"></td>
+                                    <td data-column="4"></td>
+                                    <td data-column="5"></td>
+                                    <td data-column="6"></td>
+                                </tr>
+                                <tr class="days" data-row="1">
+                                    <td data-column="0"></td>
+                                    <td data-column="1"></td>
+                                    <td data-column="2"></td>
+                                    <td data-column="3"></td>
+                                    <td data-column="4"></td>
+                                    <td data-column="5"></td>
+                                    <td data-column="6"></td>
+                                </tr>
+                                <tr class="days" data-row="2">
+                                    <td data-column="0"></td>
+                                    <td data-column="1"></td>
+                                    <td data-column="2"></td>
+                                    <td data-column="3"></td>
+                                    <td data-column="4"></td>
+                                    <td data-column="5"></td>
+                                    <td data-column="6"></td>
+                                </tr>
+                                <tr class="days" data-row="3">
+                                    <td data-column="0"></td>
+                                    <td data-column="1"></td>
+                                    <td data-column="2"></td>
+                                    <td data-column="3"></td>
+                                    <td data-column="4"></td>
+                                    <td data-column="5"></td>
+                                    <td data-column="6"></td>
+                                </tr>
+                                <tr class="days" data-row="4">
+                                    <td data-column="0"></td>
+                                    <td data-column="1"></td>
+                                    <td data-column="2"></td>
+                                    <td data-column="3"></td>
+                                    <td data-column="4"></td>
+                                    <td data-column="5"></td>
+                                    <td data-column="6"></td>
+                                </tr>
+                                <tr class="days" data-row="5">
+                                    <td data-column="0"></td>
+                                    <td data-column="1"></td>
+                                    <td data-column="2"></td>
+                                    <td data-column="3"></td>
+                                    <td data-column="4"></td>
+                                    <td data-column="5"></td>
+                                    <td data-column="6"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+                <a href=novo_evento.html>
+                    <p> Criar novo evento </p>
+                </a>
+            </div>
+        </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+        <script src="scripts/calendar.js"></script>
+
     </main>
 </body>
 
