replace application name

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img src="./images/icons/icone_menu.png" alt="Icone menu" />
             </a>
         </div>
-        <h1> NOME DO APLICATIVO </h1>
+        <h1> InClass </h1>
     </header>
     <main>
         <img src="images/profile.png" alt="Profile picture" />
