--- a/matematica_feedback.html
+++ b/matematica_feedback.html
@@ -24,7 +24,7 @@
                 <img src="./images/icons/setinha_de_cima.png" alt="Setinha" />
             </a>
         </div>
-        <h1> NOME DO APLICATIVO </h1>
+        <h1> InClass </h1>
     </header>
 
     <div class='materias'>
