--- a/sugestoes_alunos.html
+++ b/sugestoes_alunos.html
@@ -22,7 +22,7 @@
                 <img src="./images/icons/setinha_de_cima.png" alt="Setinha" />
             </a>
         </div>
-        <h1>NOME DO APLICATIVO</h1>
+        <h1>InClass</h1>
     </header>
     <main>
         <h2 class="titulo_pagina">Visualizar sugestões enviadas pelos alunos</h2>
