--- a/adicionar_sugestao.html
+++ b/adicionar_sugestao.html
@@ -25,7 +25,7 @@
                 <img src="./images/icons/setinha_de_cima.png" alt="Setinha" />
             </a>
         </div>
-        <h1> NOME DO APLICATIVO </h1>
+        <h1> InClass </h1>
     </header>
     <main>
         <h3>Adicionar Sugestão</h3>
