--- a/play_area.html
+++ b/play_area.html
@@ -26,7 +26,7 @@
                 <img src="./images/icons/setinha_de_cima.png" alt="Setinha" />
             </a>
         </div>
-        <h1> NOME DO APLICATIVO </h1>
+        <h1> InClass </h1>
     </header>
     <main>
         <h2>Play Area </h2>
