--- a/sugestoes_alunos_segundo.html
+++ b/sugestoes_alunos_segundo.html
@@ -12,18 +12,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/fonts.css">
-    <script src="scripts/sugestoes_alunos.js"></script>
 </head>
 
 <body>
     <header>
         <div class="icone_esquerda">
             <a href="index.html">
-                <img src="./images/icons/icone_menu.png" alt="Icone menu" />
-            </a>
+                <img src="./images/icons/icone_menu.png" alt="Icone menu" /></a>
             <a href="index.html">
-                <img src="./images/icons/setinha_de_cima.png" alt="Setinha" />
-            </a>
+                <img src="./images/icons/setinha_de_cima.png" alt="Setinha" /></a>
         </div>
         <h1>InClass</h1>
     </header>
@@ -41,17 +38,25 @@
                     <img class="icone_sugestao" src="./images/icons/gamepad.png" alt="icone controle" />
                     <p>Jogatina com a turma</p>
                     <img class="coracao" src="./images/icons/heart.png" alt="coração cinza" />
-                    <li class="sugestao">
-                        <img class="icone_sugestao" src="./images/icons/campground.png" alt="icone barraca" />
-                        <p>Acampamento virtual</p>
-                        <img class="coracao" src="./images/icons/heart.png" alt="coração cinza" />
-                    </li>
+                </li>
+                <li class="sugestao">
+                    <img class="icone_sugestao" src="./images/icons/campground.png" alt="icone barraca" />
+                    <p>Acampamento virtual</p>
+                    <img class="coracao" src="./images/icons/heart.png" alt="coração cinza" />
+                </li>
+                <li class="sugestao_inserida">
+                    <img class="inserido" src="" alt="icone_inserido" />
+                    <p>Lorem ipsum</p>
+                    <img class="coracao" src="./images/icons/heart.png" alt="coração cinza" />
+                </li>
+
             </ul>
         </nav>
         <a class="add_sugestao" href="adicionar_sugestao.html">
             <p>Adicionar Sugestão</p>
         </a>
     </main>
+    <script src="scripts/sugestoes_alunos_segundo.js"></script>
 </body>
 
 </html>
