fixed referenced links

--- a/play_area.html
+++ b/play_area.html
@@ -22,7 +22,7 @@
             <a href="index.html">
                 <img src="./images/icons/icone_menu.png" alt="Icone menu" />
             </a>
-            <a href="/">
+            <a href="index.html">
                 <img src="./images/icons/setinha_de_cima.png" alt="Setinha" />
             </a>
         </div>
