--- a/inicio_feedback.html
+++ b/inicio_feedback.html
@@ -20,7 +20,7 @@
             <a href="index.html">
                 <img src="./images/icons/icone_menu.png" alt="Icone menu" />
             </a>
-            <a href="/">
+            <a href="index.html">
                 <img src="./images/icons/setinha_de_cima.png" alt="Setinha" />
             </a>
         </div>
