fix some html semantic

--- a/adicionar_sugestao.html
+++ b/adicionar_sugestao.html
@@ -30,7 +30,7 @@
         <h3>Adicionar Sugestão</h3>
         <div class="icone_da_sugestao">
             <p>Ícone da sugestão: </p>
-            <img src="" name="image-swap"> <br>
+            <img src="#" id="image-swap" alt="imagem sugestoes_alunos"> <br>
         </div>
         <div class="nome_da_sugestao">
             <p>Nome da sugestão: </p>
@@ -38,7 +38,7 @@
         </div>
         <div class="tipo_da_atividade">
             <p>Tipo da atividade: </p>
-            <select id="tipo_atividade" name="atividade" size="1",  onchange="setImage(this);">
+            <select id="tipo_atividade" name="atividade" size="1" onchange="setImage(this);">
                 <option value="./images/icons/film.png">Filme</option>
                 <option value="./images/icons/gamepad.png">Jogo Online</option>
                 <option value="./images/icons/tv.png">Série</option>
