--- a/sugestoes_alunos_segundo.html
+++ b/sugestoes_alunos_segundo.html
@@ -45,7 +45,7 @@
                     <img class="coracao" src="./images/icons/heart.png" alt="coração cinza" />
                 </li>
                 <li class="sugestao_inserida">
-                    <img class="inserido" src="" alt="icone_inserido" />
+                    <img class="inserido" src="#" alt="icone_inserido" />
                     <p>Lorem ipsum</p>
                     <img class="coracao" src="./images/icons/heart.png" alt="coração cinza" />
                 </li>
